@@ -38,7 +38,8 @@ class SMWQueryProcessor {
 							'debug'      => 'SMWListResultPrinter',
 							'rss'        => 'SMWRSSResultPrinter',
 							'icalendar'  => 'SMWiCalendarResultPrinter',
-							'vcard'      => 'SMWvCardResultPrinter');
+							'vcard'      => 'SMWvCardResultPrinter',
+							'csv'        => 'SMWCsvResultPrinter');
 
 	/**
 	 * Parse a query string given in SMW's query language to create
@@ -75,7 +76,7 @@ class SMWQueryProcessor {
 			$querymode = SMWQuery::MODE_COUNT;
 		} elseif ($format == 'debug') {
 			$querymode = SMWQuery::MODE_DEBUG;
-		} elseif (in_array($format, array('rss','icalendar','vcard'))) {
+		} elseif (in_array($format, array('rss','icalendar','vcard','csv'))) {
 			$querymode = SMWQuery::MODE_NONE;
 		} else {
 			$querymode = SMWQuery::MODE_INSTANCES;
